.config/waybar/style.css
/* 全局设置 */
* {
  font-family: "CaskaydiaCove Nerd Font", "Font Awesome 6 Free", "Font Awesome 6 Free Solid";
  font-weight: bold;
  font-size: 16px;
  color: #dcdfe1;
}

/* 透明 Waybar 背景 */
#waybar {
  background-color: rgba(0, 0, 0, 0);
  border: none;
  box-shadow: none;
}

/* 所有模块统一风格 */
#workspaces,
#submap,
#mpris,
#user,
#tray {
  /*background-color: rgba(29,31,46, 0.95);*/
  background-color: rgba(15, 27, 53, 0.9);
  padding: 4px 6px;
  /* 保持内部间距 */
  margin-top: 6px;
  /* 外部间距增加 */
  margin-left: 6px;
  /* 外部间距增加 */
  margin-right: 6px;
  /* 外部间距增加 */
  border-radius: 10px;
  border-width: 0px;
}

#clock,
#cpu,
#custom-power {
  background-color: rgba(15, 27, 53, 0.9);
  margin-top: 6px;
  /* 与屏幕顶部留出距离 */
  margin-right: 6px;
  /*margin-bottom: 4px;*/
  padding: 4px 2px;
  /* 保持内部间距 */
  border-radius: 0 10px 10px 0;
  border-width: 0px;
}

#network,
#memory,
#custom-lock {
  background-color: rgba(15, 27, 53, 0.9);
  margin-top: 6px;
  /* 与屏幕顶部留出距离 */
  margin-left: 6px;
  /*margin-bottom: 4px;*/
  padding: 4px 2px;
  /* 保持内部间距 */
  border-radius: 10px 0 0 10px;
  border-width: 0px;
}

#custom-reboot,
#bluetooth,
#battery,
#pulseaudio,
#backlight,
#custom-temperature,
#memory,
#cpu {
  background-color: rgba(15, 27, 53, 0.9);
  margin-top: 6px;
  /* 与屏幕顶部留出距离 */
  /*margin-bottom: 4px;*/
  padding: 4px 2px;
  /* 保持内部间距 */
  border-width: 0px;
}

#custpm-temperature.critical,
#pulseaudio.muted {
  color: #FF0000;
  padding-top: 0;
}

/* 鼠标悬停变亮一点 */
#bluetooth:hover,
#network:hover,
/*#tray:hover,*/
#backlight:hover,
#battery:hover,
#pulseaudio:hover,
#custom-temperature:hover,
#memory:hover,
#cpu:hover,
#clock:hover,
#custom-lock:hover,
#custom-reboot:hover,
#custom-power:hover,
/*#workspaces:hover,*/
#mpris:hover {
  background-color: rgba(70, 75, 90, 0.9);
}

/* 工作区激活状态高亮 */
#workspaces button:hover {
  background-color: rgba(97, 175, 239, 0.2);
  padding: 2px 8px;
  margin: 0 2px;
  border-radius: 10px;
}

#workspaces button.active {
  background-color: #61afef;
  /* 蓝色高亮 */
  color: #ffffff;
  padding: 2px 8px;
  margin: 0 2px;
  border-radius: 10px;
}

/* 未激活工作区按钮 */
#workspaces button {
  background: transparent;
  border: none;
  color: #888888;
  padding: 2px 8px;
  margin: 0 2px;
  font-weight: bold;
}

#mpris {
  font-weight: 500;
  font-style: italic;
}

#submap.Normal {
  background-color: rgba(15, 27, 53, 0.9);
}

#submap.Resize {
  background-color: #FFD700;
  color: #000;
}

